# poolshark

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  bench
.claude/: settings.local.json
benches/: README.md  pooling.rs
docs/hashmap/1/report/: index.html
docs/hashmap/10/report/: index.html
docs/hashmap/100/report/: index.html
docs/hashmap/20/report/: index.html
docs/hashmap/30/report/: index.html
docs/hashmap/40/report/: index.html
docs/hashmap/5/report/: index.html
docs/hashmap/50/report/: index.html
docs/hashmap/60/report/: index.html
docs/hashmap/70/report/: index.html
docs/hashmap/80/report/: index.html
docs/hashmap/90/report/: index.html
docs/hashmap/global_pooled/1/base/: estimates.json  sample.json  tukey.json
docs/hashmap/global_pooled/1/new/: benchmark.json  sample.json  tukey.json
docs/hashmap/global_pooled/1/report/: index.html
docs/hashmap/global_pooled/10/base/: benchmark.json  (+3 more)
docs/hashmap/global_pooled/report/: index.html
docs/hashmap/local_pooled/report/: index.html
docs/hashmap/report/: index.html
docs/hashmap/standard/report/: index.html
docs/report/: index.html
docs/string/1/report/: index.html
docs/string/10/report/: index.html
docs/string/100/report/: index.html
docs/string/20/report/: index.html
docs/string/30/report/: index.html
docs/string/40/report/: index.html
docs/string/5/report/: index.html
docs/string/50/report/: index.html
docs/string/60/report/: index.html
docs/string/70/report/: index.html
docs/string/80/report/: index.html
docs/string/90/report/: index.html
docs/string/global_pooled/report/: index.html
docs/string/local_pooled/report/: index.html
docs/string/report/: index.html
docs/string/standard/report/: index.html
docs/vec/1/report/: index.html
docs/vec/10/report/: index.html
docs/vec/100/report/: index.html
docs/vec/20/report/: index.html
docs/vec/30/report/: index.html
docs/vec/40/report/: index.html
docs/vec/5/report/: index.html
docs/vec/50/report/: index.html
docs/vec/60/report/: index.html
docs/vec/70/report/: index.html
docs/vec/80/report/: index.html
docs/vec/90/report/: index.html
docs/vec/global_pooled/report/: index.html
docs/vec/local_pooled/report/: index.html
docs/vec/report/: index.html
docs/vec/standard/report/: index.html
examples/: global.rs  local.rs
poolshark_derive/: Cargo.toml
poolshark_derive/src/: lib.rs
src/: arc.rs  lib.rs  pooled.rs  test.rs
src/global/: arc.rs  mod.rs
src/local/: mod.rs
(+597 files in other folders)
