[package]
authors = ["Eric Stokes <letaris@gmail.com>"]
categories = ["caching", "memory-management"]
description = "Thread safe object pool"
documentation = "https://docs.rs/netidx-pool"
edition = "2024"
keywords = ["pool", "recycle", "object-pool"]
license = "MIT"
name = "poolshark"
readme = "README.md"
repository = "https://github.com/estokes/netidx"
version = "0.1.0"

[features]
default = ["triomphe", "indexmap", "serde"]
triomphe = ["dep:triomphe"]
indexmap = ["dep:indexmap"]
serde = ["dep:serde", "dep:serde_derive"]


[dependencies]
crossbeam-queue = "0.3"
fxhash = "0.2"
parking_lot = "0.12.1"
indexmap = { version = "2", optional = true }
serde_derive = { version = "1", optional = true }
serde = { version = "1", optional = true }
triomphe = { version = "0.1", optional = true }
