[package]
authors = ["Eric Stokes <letaris@gmail.com>"]
categories = ["caching", "memory-management"]
description = "Thread safe object pool"
documentation = "https://docs.rs/poolshark"
edition = "2024"
keywords = ["pool", "recycle", "object-pool"]
license = "MIT"
name = "poolshark"
readme = "README.md"
repository = "https://github.com/estokes/poolshark"
version = "0.2.5"

[features]
default = ["triomphe", "indexmap", "serde"]
triomphe = ["dep:triomphe"]
indexmap = ["dep:indexmap"]
serde = ["dep:serde", "dep:serde_derive"]


[dependencies]
crossbeam-queue = "0.3"
fxhash = "0.2"
indexmap = { version = "2", optional = true }
serde_derive = { version = "1", optional = true }
serde = { version = "1", optional = true }
triomphe = { version = "0.1", optional = true }
poolshark_derive = { version = "0.1.1", path = "poolshark_derive" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pooling"
harness = false

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = false
strip = true
