[package]
authors = ["Eric Stokes <letaris@gmail.com>"]
categories = ["caching", "memory-management"]
description = "Thread safe object pool"
documentation = "https://docs.rs/poolshark"
edition = "2024"
keywords = ["pool", "recycle", "object-pool"]
license = "MIT"
name = "poolshark_derive"
readme = "README.md"
repository = "https://github.com/estokes/poolshark"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.106"
